[package]
name = "selenium-manager"
version = "0.4.46-nightly" # don't forget to update rust/BUILD.bazel
edition = "2024"
authors = ["Selenium <selenium-developers@googlegroups.com"]
license = "Apache-2.0"
homepage = "https://www.selenium.dev/"
repository = "https://github.com/SeleniumHQ/selenium"
documentation = "https://www.selenium.dev/documentation/"
description = """
Selenium Manager is a CLI tool that automatically manages the browser/driver resources required by Selenium.
"""

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
log = "0.4.29"
env_logger = "0.11.10"
regex = "1.12.3"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
tempfile = "3.27.0"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls-no-provider"] }
# Pin the ring crypto backend so aws-lc-sys (and its C build requirements) are
# never compiled. The ring provider must be installed at process startup; see
# main.rs. rustls-platform-verifier (pulled in by reqwest) is crypto-agnostic
# and works with whichever provider is installed as the process default.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.1.9"
tar = "0.4.44"
infer = "0.19.0"
exitcode = "1.1.2"
toml = "1.0"
bzip2 = "0.6.1"
sevenz-rust = "0.6.1"
xz2 = "0.1.7"
walkdir = "2.5.0"
debpkg = "0.6.0"
anyhow = { version = "1.0.102", default-features = false, features = ["backtrace", "std"] }
apple-flat-package = "0.20.0"
which = "8.0.2"
fs2 = "0.4.3"
fs_extra = "1.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winver", "winnt", "sysinfoapi"] }

[features]
avoid_stats = []

[dev-dependencies]
assert_cmd = "2.2.2"
is_executable = "1.0.5"
rstest = { version = "0.26.1", default-features = false }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[profile.dev]
debug = true             # Full debug info
split-debuginfo = 'off'  # Debug info in the final artifact
